Standardize all sound files to MP3 format for consistency

--- a/public/download-sounds.html
+++ b/public/download-sounds.html
@@ -90,7 +90,7 @@
     <div class="emoji">🪙</div>
     <div class="info">
       <div class="name">Coin Drop - Small Tips <span class="priority">PRIORITY</span></div>
-      <div class="filename">coin-common.wav</div>
+      <div class="filename">coin-common.mp3</div>
       <div class="search">Search: "coin drop" or "coins falling"</div>
     </div>
     <a class="btn" href="https://pixabay.com/sound-effects/search/coin%20drop/" target="_blank">Search on Pixabay</a>
@@ -99,7 +99,7 @@
     <div class="emoji">💵</div>
     <div class="info">
       <div class="name">Cash Register - Medium Tips <span class="priority">PRIORITY</span></div>
-      <div class="filename">coin-rare.wav</div>
+      <div class="filename">coin-rare.mp3</div>
       <div class="search">Search: "cash register" or "cha-ching"</div>
     </div>
     <a class="btn" href="https://pixabay.com/sound-effects/search/cash%20register/" target="_blank">Search on Pixabay</a>
@@ -108,7 +108,7 @@
     <div class="emoji">🎰</div>
     <div class="info">
       <div class="name">Slot Machine Win - Large Tips <span class="priority">PRIORITY</span></div>
-      <div class="filename">coin-epic.wav</div>
+      <div class="filename">coin-epic.mp3</div>
       <div class="search">Search: "slot machine win" or "jackpot"</div>
     </div>
     <a class="btn" href="https://pixabay.com/sound-effects/search/slot%20machine%20win/" target="_blank">Search on Pixabay</a>
@@ -117,7 +117,7 @@
     <div class="emoji">🏆</div>
     <div class="info">
       <div class="name">Jackpot Celebration - Huge Tips <span class="priority">PRIORITY</span></div>
-      <div class="filename">coin-legendary.wav</div>
+      <div class="filename">coin-legendary.mp3</div>
       <div class="search">Search: "jackpot winner" or "casino celebration"</div>
     </div>
     <a class="btn" href="https://pixabay.com/sound-effects/search/jackpot/" target="_blank">Search on Pixabay</a>
@@ -126,7 +126,7 @@
     <div class="emoji">💰</div>
     <div class="info">
       <div class="name">Big Tip Alert</div>
-      <div class="filename">big-tip.wav</div>
+      <div class="filename">big-tip.mp3</div>
       <div class="search">Search: "winning fanfare" or "victory"</div>
     </div>
     <a class="btn" href="https://pixabay.com/sound-effects/search/winning%20fanfare/" target="_blank">Search on Pixabay</a>
@@ -339,7 +339,7 @@
     <div class="emoji">🎉</div>
     <div class="info">
       <div class="name">Goal Complete</div>
-      <div class="filename">goal-complete.wav</div>
+      <div class="filename">goal-complete.mp3</div>
       <div class="search">Search: "achievement" or "level up"</div>
     </div>
     <a class="btn" href="https://pixabay.com/sound-effects/search/achievement%20unlock/" target="_blank">Search on Pixabay</a>
